--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,43 +6,22 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "type-check": "tsc --noEmit",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "prepare": "husky",
-    "commit": "git-cz",
-    "clarityos:check": "echo '🔍 ClarityOS™ compliance check - verify design doctrine alignment'",
-    "pre-commit": "lint-staged && npm run type-check",
-    "test": "echo 'Tests not configured yet'",
-    "test:watch": "echo 'Tests not configured yet'",
-    "test:coverage": "echo 'Tests not configured yet'"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@medusajs/medusa-js": "^6.1.10",
-    "@next/font": "^14.2.15",
-    "@stitches/react": "^1.2.8",
-    "@tanstack/react-query": "^5.84.1",
-    "framer-motion": "^12.23.12",
-    "lucide-react": "^0.536.0",
-    "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "next": "15.4.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.1.4",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3"
   }
 }
